force-app/main/default/objects/Seguro__c/Seguro__c.object-meta.xml
<CustomObject>
    <label>Segurohhh</label>
    <nameField>
        <displayFormat>SEG-{0000}</displayFormat>
        <label>Número de seguro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seguros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>