force-app/main/default/objects/Seguro__c/fields/Aseguradora__c.field-meta.xml
<CustomField>
    <fullName>Aseguradora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aseguradora</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Seguros2</relationshipName>
    <type>Lookup</type>
</CustomField>