force-app/main/default/objects/Seguro__c/fields/Compania__c.field-meta.xml
<CustomField>
    <fullName>Compania__c</fullName>
    <label>Compañía</label>
    <length>40</length>
    <type>Text</type>
</CustomField>