force-app/main/default/objects/Seguro__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vigente</fullName>
                <default>true</default>
                <label>Vigente</label>
            </value>
            <value>
                <fullName>Por renovar</fullName>
            </value>
            <value>
                <fullName>En renovación</fullName>
            </value>
            <value>
                <fullName>Renovada</fullName>
            </value>
            <value>
                <fullName>No renovada</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>