force-app/main/default/objects/Seguro__c/fields/Fecha_marcado_por_renovar__c.field-meta.xml
<CustomField>
    <fullName>Fecha_marcado_por_renovar__c</fullName>
    <description>Se establece automaticamente el dia que el seguro entra a Estatus = Por renovar. Sirve como ancla para la cadencia 7d/30d/45d.</description>
    <label>Fecha marcado por renovar</label>
    <type>Date</type>
</CustomField>