force-app/main/default/objects/Seguro__c/fields/Migrado_SICAS__c.field-meta.xml
<CustomField>
    <fullName>Migrado_SICAS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca registros cargados desde migracion historica SICAS. Las automatizaciones (generacion de planes/recibos, creacion de Opportunity de renovacion) se saltan cuando este checkbox es true.</description>
    <inlineHelpText>Seguros cargados desde el sistema legado SICAS. No disparan generacion automatica de plan de pagos/recibos.</inlineHelpText>
    <label>Migrado SICAS</label>
    <type>Checkbox</type>
</CustomField>