force-app/main/default/objects/Seguro__c/fields/Motivo_No_Renovacion__c.field-meta.xml
<CustomField>
    <fullName>Motivo_No_Renovacion__c</fullName>
    <description>Obligatorio cuando el seguro pasa a estatus &quot;No renovada&quot;. Reemplaza Encuesta_Salida__c capturando la razón directamente en el Seguro.</description>
    <label>Motivo de No Renovación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cambio a otra aseguradora</fullName>
            </value>
            <value>
                <fullName>Mal servicio reclamo</fullName>
            </value>
            <value>
                <fullName>No contactable</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>Vehiculo vendido o baja</fullName>
            </value>
            <value>
                <fullName>Ya no necesita cobertura</fullName>
            </value>
            <value>
                <fullName>Cambió de aseguradora</fullName>
                <isActive>false</isActive>
                <label>Cambió de aseguradora</label>
            </value>
            <value>
                <fullName>No contactado</fullName>
                <isActive>false</isActive>
                <label>No contactado</label>
            </value>
            <value>
                <fullName>Venta del activo</fullName>
                <isActive>false</isActive>
                <label>Venta del activo</label>
            </value>
            <value>
                <fullName>Ya no necesita el producto</fullName>
                <isActive>false</isActive>
                <label>Ya no necesita el producto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>