force-app/main/default/objects/Seguro__c/fields/Numero_poliza__c.field-meta.xml
<CustomField>
    <fullName>Numero_poliza__c</fullName>
    <label>Número de póliza</label>
    <length>50</length>
    <type>Text</type>
</CustomField>