force-app/main/default/objects/Seguro__c/fields/Poliza_renovada_de__c.field-meta.xml
<CustomField>
    <fullName>Poliza_renovada_de__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Póliza renovada</label>
    <referenceTo>Seguro__c</referenceTo>
    <relationshipName>Renovaciones</relationshipName>
    <type>Lookup</type>
</CustomField>