force-app/main/default/objects/Seguro__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Ramo__c</field>
            <operation>equals</operation>
            <value>Auto, Daños, GMM, PPR, RC, Salud, Vida</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Seguros</relationshipName>
    <type>Lookup</type>
</CustomField>