force-app/main/default/objects/Seguro__c/fields/Ramo__c.field-meta.xml
<CustomField>
    <fullName>Ramo__c</fullName>
    <label>Ramo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Daños</fullName>
            </value>
            <value>
                <fullName>Fianzas</fullName>
            </value>
            <value>
                <fullName>GMM</fullName>
            </value>
            <value>
                <fullName>PPR</fullName>
            </value>
            <value>
                <fullName>RC</fullName>
            </value>
            <value>
                <fullName>Vida</fullName>
            </value>
            <value>
                <fullName>Multirramo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>