force-app/main/default/objects/Seguro__c/fields/Recibos_vencidos__c.field-meta.xml
<CustomField>
    <fullName>Recibos_vencidos__c</fullName>
    <description>Numero de recibos vencidos (actualizado por trigger o batch diario). Indicador operativo para cadencias de cobranza.</description>
    <label>Recibos vencidos</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>