force-app/main/default/objects/Seguro__c/fields/Tipo_originador__c.field-meta.xml
<CustomField>
    <fullName>Tipo_originador__c</fullName>
    <label>Tipo de originador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IA (Agentforce)</fullName>
            </value>
            <value>
                <fullName>Vendedor Humano</fullName>
            </value>
            <value>
                <fullName>Agente Externo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>