force-app/main/default/objects/Seguro__c/fields/Ventana_Renovacion__c.field-meta.xml
<CustomField>
    <fullName>Ventana_Renovacion__c</fullName>
    <description>Días antes del vencimiento a los que debe activarse la renovación, variable por ramo. Auto 45, GMM 60, Vida/PPR 90, Daños 30, Fianzas 30, otro 45.</description>
    <formula>45</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ventana de Renovación (días)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>