force-app/main/default/objects/Seguro__c/listViews/Mis_clientes_por_renovar.listView-meta.xml
<ListView>
    <fullName>Mis_clientes_por_renovar</fullName>
    <columns>NAME</columns>
    <columns>Numero_poliza__c</columns>
    <columns>Cliente__c</columns>
    <columns>Fin_del_seguro__c</columns>
    <columns>Dias_para_vencer__c</columns>
    <columns>Semaforo_renovacion__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Dias_para_vencer__c</field>
        <operation>lessOrEqual</operation>
        <value>90</value>
    </filters>
    <filters>
        <field>Dias_para_vencer__c</field>
        <operation>greaterOrEqual</operation>
        <value>0</value>
    </filters>
    <label>Mis clientes por renovar</label>
</ListView>