force-app/main/default/objects/Seguro__c/listViews/Por_renovar_30d.listView-meta.xml
<ListView>
    <fullName>Por_renovar_30d</fullName>
    <columns>NAME</columns>
    <columns>Numero_poliza__c</columns>
    <columns>Cliente__c</columns>
    <columns>Vendedor__c</columns>
    <columns>Fin_del_seguro__c</columns>
    <columns>Dias_para_vencer__c</columns>
    <columns>Semaforo_renovacion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dias_para_vencer__c</field>
        <operation>lessOrEqual</operation>
        <value>30</value>
    </filters>
    <filters>
        <field>Dias_para_vencer__c</field>
        <operation>greaterOrEqual</operation>
        <value>0</value>
    </filters>
    <label>Por renovar 30d</label>
</ListView>